css overflow issue on slide 1 fixed

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
   color: var(--text);
   font-family: 'Roboto', sans-serif;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   padding-top: 25px;
   padding-left: 10px;
 }
